<resources>
    <string name="app_name">TBC_Midterm_Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="no_account">Don\'t have an account? <u>Create now!</u></string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_account">Already have an account? <u>Sign in here!</u></string>
    <string name="continue_guest"><u>Continue as a guest</u></string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="offers">Offers</string>
    <string name="library">Library</string>
    <string name="collection">Collection</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">sex</string>
    <string name="age">age</string>
    <string name="height_cm">height (cm)</string>
    <string name="weight_kg">weight (kg)</string>
    <string name="calculate">Calculate</string>
    <string name="packages_offered">Packages offered</string>
    <string name="exercises">Exercises</string>
    <string-array name="sex">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
</resources>